--- a/faqs.html
+++ b/faqs.html
@@ -45,32 +45,32 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-2 offset-md-2">
-        <div class="card" style="width: 12rem;top: -50px;">
+      <div class="col-md-3">
+        <div class="card" style="width: 100%;top: -50px;">
           <img src="dist/img/Image Placeholder.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title text-center">Plataforma</h5>
           </div>
         </div>
       </div>
-      <div class="col-md-2">
-        <div class="card" style="width: 12rem;top: -50px;">
+      <div class="col-md-3">
+        <div class="card" style="width: 100%;top: -50px;">
           <img src="dist/img/Image Placeholder.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title text-center">Pagamentos</h5>
           </div>
         </div>
       </div>
-      <div class="col-md-2">
-        <div class="card" style="width: 12rem;top: -50px;">
+      <div class="col-md-3">
+        <div class="card" style="width: 100%;top: -50px;">
           <img src="dist/img/Image Placeholder.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title text-center">Faturação</h5>
           </div>
         </div>
       </div>
-      <div class="col-md-2">
-        <div class="card" style="width: 12rem;top: -50px;">
+      <div class="col-md-3">
+        <div class="card" style="width: 100%;top: -50px;">
           <img src="dist/img/Image Placeholder.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title text-center">Pagamentos Autorizados</h5>
