--- a/index.html
+++ b/index.html
@@ -52,19 +52,46 @@
         <div class="col-md-6">
         </div>
       </div>
-      <div class="row">
-        <div class="col">
-          <div class="msg-pode-contar">com o pay&go pode contar com</div>
-        </div>
+    </div>
+  </div>
+
+  <div class="container">
+
+    <div class="row" style="padding-top: 100px;padding-bottom: 100px;">
+      <div class="col text-center">
+        <object data="dist/img/logo-axl.svg" type="image/svg+xml"></object>
+      </div>
+      <div class="col text-center">
+        <object data="dist/img/logo-caco.svg" type="image/svg+xml"></object>
+      </div>
+      <div class="col text-center">
+        <object data="dist/img/logo-ftp.svg" type="image/svg+xml"></object>
+      </div>
+      <div class="col text-center">
+        <object data="dist/img/logo-hub.svg" type="image/svg+xml"></object>
+      </div>
+      <div class="col text-center">
+        <object data="dist/img/logo-insta.svg" type="image/svg+xml"></object>
+      </div>
+      <div class="col text-center">
+        <object data="dist/img/logo-proswim.svg" type="image/svg+xml"></object>
+      </div>
+      <div class="col text-center">
+        <object data="dist/img/logo-trimanta.svg" type="image/svg+xml"></object>
       </div>
     </div>
   </div>
 
   <div class="album">
     <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="titulo-preto text-center">com o pay&go pode contar com</div>
+        </div>
+      </div>
       <div class="row row-cols-2 row-cols-sm-2 row-cols-md-4">
         <div class="col">
-          <div class="card" style="top: -60px;">
+          <div class="card">
             <img src="dist/img/cobrancas.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">
@@ -74,7 +101,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card" style="top: -60px;">
+          <div class="card">
             <img src="dist/img/faturacao.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">Faturação Automatizada</p>
@@ -82,7 +109,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card" style="top: -60px;">
+          <div class="card">
             <img src="dist/img/envio.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">
@@ -93,7 +120,7 @@
         </div>
 
         <div class="col">
-          <div class="card" style="top: -60px;">
+          <div class="card">
             <img src="dist/img/seguro.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">
@@ -101,38 +128,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-
-    <div class="row">
-      <div class="col">
-        <div class="titulo-preto">já contam conosco</div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <object data="dist/img/logo-axl.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="col">
-        <object data="dist/img/logo-caco.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="col">
-        <object data="dist/img/logo-ftp.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="col">
-        <object data="dist/img/logo-hub.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="col">
-        <object data="dist/img/logo-insta.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="col">
-        <object data="dist/img/logo-proswim.svg" type="image/svg+xml"></object>
-      </div>
-      <div class="col">
-        <object data="dist/img/logo-trimanta.svg" type="image/svg+xml"></object>
       </div>
     </div>
   </div>
@@ -333,7 +328,7 @@
                   <span style="padding-right: 15px;">
                     <img src="dist/img/IconFacebook.svg" alt="Facebook">
                   </span>
-                  <a target="_blank" href="https//www.facebook.com/profile.php?id=61571187801546#">Facebook</a>
+                  <a target="_blank" href="https//www.facebook.com/profile.php?id=61571187801546#">@</a>
                 </div>
               </div>
             </div>
