--- a/planos.html
+++ b/planos.html
@@ -63,7 +63,7 @@
           <div class="jumbo-header-planos">
             30 dias de utilização gratuita*
           </div>
-          <div class="jumbo-nota-planos">
+          <div class="jumbo-nota-planos text-center">
             máximo de 5 000,00€ em transações
           </div>
         </div>
