--- a/contacto.html
+++ b/contacto.html
@@ -179,7 +179,7 @@
                     <span style="padding-right: 15px;">
                       <img src="dist/img/IconFacebook.svg" alt="Facebook">
                     </span>
-                    <a target="_blank" href="https//www.facebook.com/profile.php?id=61571187801546#">@</a>
+                    <a href="https//www.facebook.com/profile.php?id=61571187801546" target="_blank">@</a>
                   </div>
                 </div>
               </div>
