--- a/index.html
+++ b/index.html
@@ -417,12 +417,12 @@
         </div>
         <div class="col-10 col-md-auto mb-2 mb-md-0">
           <ul class="nav">
-            <li><a href="#" class="btn header-menu-item menu-item-footer">PAY&GO</a></li>
-            <li><a href="#" class="btn header-menu-item menu-item-footer">Quem Somos</a></li>
-            <li><a href="#" class="btn header-menu-item menu-item-footer">Blog</a></li>
-            <li><a href="#" class="btn header-menu-item menu-item-footer">FAQs</a></li>
-            <li><a href="#" class="btn header-menu-item menu-item-footer">Contactos</a></li>
-            <li><a href="#" class="btn header-menu-item menu-item-footer">Termos Legais</a></li>
+            <li><a href="planos.html" class="btn header-menu-item menu-item-footer">PAY&GO</a></li>
+            <li><a href="quemsomos.html" class="btn header-menu-item menu-item-footer">Quem Somos</a></li>
+            <li><a href="blog.html" class="btn header-menu-item menu-item-footer">Blog</a></li>
+            <li><a href="faqs.html" class="btn header-menu-item menu-item-footer">FAQs</a></li>
+            <li><a href="contacto.html" class="btn header-menu-item menu-item-footer">Contactos</a></li>
+            <li><a href="termos.html" class="btn header-menu-item menu-item-footer">Termos Legais</a></li>
           </ul>
         </div>
       </div>
