--- a/planos.html
+++ b/planos.html
@@ -50,10 +50,10 @@
   <div class="fundo-planos">
     <div class="p-5 rounded-3 row align-items-md-stretch">
       <div class="row">
-        <div class="p-5 col-md-6 jumbo-logo-planos text-center">
+        <div class="p-5 col-md-6 col-sm-12 jumbo-logo-planos text-center">
           <object class="img-fluid" width="450" data="dist/img/planos-pg-logo.svg" type="image/svg+xml"></object>
         </div>
-        <div class="p-5 col-md-6">
+        <div class="p-5 col-md-6 col-sm-12">
           <p class="h-20 jumbo-text-planos">
             A solução inovadora projetada para melhorar a produtividade na área das cobranças e faturação.
           </p>
@@ -87,7 +87,7 @@
     </div>
   </div>
 
-  <div class="album  fundo-album">
+  <div class="album fundo-album">
     <div class="container">
       <div class="row">
         <div class="col">
