--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
           </ul>
           <div class="d-lg-flex col-lg-3 justify-content-lg-end text-end">
             <button type="button" onclick="location.href='registo.html'"
-              class="btn-registo rounded-pill">Registo</button>
+              class="btn-registo rounded-pill">Registo</button>&nbsp;
             <button type="button" class="btn-signin rounded-pill">Iniciar Sessão</button>
           </div>
         </div>
