--- a/quemsomos.html
+++ b/quemsomos.html
@@ -39,7 +39,7 @@
           </ul>
           <div class="d-lg-flex col-lg-3 justify-content-lg-end text-end">
             <button type="button" onclick="location.href='registo.html'"
-              class="btn-registo rounded-pill">Registo</button>
+              class="btn-registo rounded-pill">Registo</button>&nbsp;
             <button type="button" class="btn-signin rounded-pill">Iniciar Sessão</button>
           </div>
         </div>
@@ -85,9 +85,8 @@
       </div>
       <div class="col-md-7 p-5">
         <div class="titulo-azul">Porque escolher a webify</div>
-        <p class="lead">Somos uma empresa tecnológica focada na utilização das mais recentes e avançadas tecnologias com
-          o objectivo da automatização e desmaterialização de processos.
-          A sua atividade de desenvolvimento centraliza-se na optimização e economia dos recursos disponíveis.
+        <p class="lead">Somos uma empresa ágil que actua na área dos sistemas de informação. Damos prioridade à
+          satisfação dos nossos clientes na persecução dos seus objectivos na área dos sistemas de informação.
         </p>
       </div>
     </div>
@@ -97,9 +96,12 @@
     <div class="row featurette">
       <div class="col-md-7 p-5">
         <div class="titulo-azul">Missão, visão e valores</div>
-        <p class="lead">Somos uma empresa tecnológica focada na utilização das mais recentes e avançadas tecnologias com
-          o objectivo da automatização e desmaterialização de processos.
-          A sua atividade de desenvolvimento centraliza-se na optimização e economia dos recursos disponíveis.
+        <p class="lead">A WEBIFY conta com vários clientes que demonstram a sua satisfação, sendo eles os primeiros
+          embaixadores dos nossos produtos.
+          Ajudamos os nossos clientes a automatizar e optimizar os seus processos manuais passíveis de
+          automatização e por forma a libertar recursos para outras tarefas mais produtivas ou criativas.
+          A confiança depositada e a relação com o cliente é vista como uma parceria, em que fazemos o trajecto lado
+          a lado e crescemos juntos.
         </p>
       </div>
       <div class="col-md-5 p-5">
@@ -117,9 +119,9 @@
       </div>
       <div class="col-md-7 p-5">
         <div class="titulo-azul">o que já foi implementado</div>
-        <p class="lead">Somos uma empresa tecnológica focada na utilização das mais recentes e avançadas tecnologias com
-          o objectivo da automatização e desmaterialização de processos.
-          A sua atividade de desenvolvimento centraliza-se na optimização e economia dos recursos disponíveis.
+        <p class="lead">Dispomos de um portfolio variado de produtos, para a Gestão de Eventos, Cobranças,
+          Carregamentos Veículos Eléctricos, Campanhas de Marketing por WhatsApp, sendo Tech Provider desta importante
+          plataforma de comunicação.
         </p>
       </div>
     </div>
