--- a/quemsomos.html
+++ b/quemsomos.html
@@ -85,8 +85,8 @@
       </div>
       <div class="col-md-7 p-5">
         <div class="titulo-azul">Porque escolher a webify</div>
-        <p class="lead">Somos uma empresa ágil que actua na área dos sistemas de informação. Damos prioridade à
-          satisfação dos nossos clientes na persecução dos seus objectivos na área dos sistemas de informação.
+        <p class="lead">Regemo-nos por principios simples e ágeis para o desenvolvimento dos produtos na área dos
+          sistemas de informação. A satisfação dos nossos clientes na persecução dos seus objectivos é o nosso foco.
         </p>
       </div>
     </div>
