--- a/quemsomos.html
+++ b/quemsomos.html
@@ -119,8 +119,8 @@
       </div>
       <div class="col-md-7 p-5">
         <div class="titulo-azul">o que já foi implementado</div>
-        <p class="lead">Dispomos de um portfolio variado de produtos, para a Gestão de Eventos, Cobranças,
-          Carregamentos Veículos Eléctricos, Campanhas de Marketing por WhatsApp, sendo Tech Provider desta importante
+        <p class="lead">Dispomos de um portfolio variado de produtos, para Gestão de Eventos, Cobranças,
+          Carregamentos Veículos Eléctricos, Campanhas de Marketing por WhatsApp, sendo Tech Provider desta
           plataforma de comunicação.
         </p>
       </div>
