--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
             <li class="nav-item menu"><a class="nav-link menu" href="planos.html"
                 class="btn header-menu-item">PAY&GO</a>
             </li>
-            <li class="nav-item menu"><a class="nav-link menu" href="faqs.html" class="btn header-menu-item">Blog</a>
+            <li class="nav-item menu"><a class="nav-link menu" href="blog.html" class="btn header-menu-item">Blog</a>
             </li>
             <li class="nav-item menu"><a class="nav-link menu" href="faqs.html" class="btn header-menu-item">FAQs</a>
             </li>
@@ -68,7 +68,8 @@
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
           src="dist/img/image1.png" alt="WEBIFY" width="100%" />
         <p class="blog-card-titulo">Benefícios da Automatização de Faturação</p>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
+        <p class="blog-card-texto">Some representative placeholder content for the three columns of text below the
+          carousel. This is the first
           column.</p>
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
       </div>
@@ -76,7 +77,8 @@
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
           src="dist/img/image2.png" alt="WEBIFY" width="100%" />
         <p class="blog-card-titulo">Facilidade de Uso da Plataforma</p>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
+        <p class="blog-card-texto">Some representative placeholder content for the three columns of text below the
+          carousel. This is the first
           column.</p>
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
       </div>
@@ -84,7 +86,8 @@
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
           src="dist/img/image3.png" alt="WEBIFY" width="100%" />
         <p class="blog-card-titulo">Suporte ao Cliente e Recursos de Ajuda</p>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
+        <p class="blog-card-texto">Some representative placeholder content for the three columns of text below the
+          carousel. This is the first
           column.</p>
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
       </div>
@@ -92,7 +95,8 @@
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
           src="dist/img/image4.png" alt="WEBIFY" width="100%" />
         <p class="blog-card-titulo">Tutoriais e Dicas</p>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first
+        <p class="blog-card-texto">Some representative placeholder content for the three columns of text below the
+          carousel. This is the first
           column.</p>
         <p><a class="btn blog-btn rounded-pill" href="#">Ler Mais...</a></p>
       </div>
