--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li class="nav-item menu"><a class="nav-link menu" href="planos.html"
                 class="btn header-menu-item">PAY&GO</a>
             </li>
-            <li class="nav-item menu"><a class="nav-link menu" href="faqs.html" class="btn header-menu-item">Blog</a>
+            <li class="nav-item menu"><a class="nav-link menu" href="blog.html" class="btn header-menu-item">Blog</a>
             </li>
             <li class="nav-item menu"><a class="nav-link menu" href="faqs.html" class="btn header-menu-item">FAQs</a>
             </li>
@@ -59,7 +59,7 @@
             agendar cobranças automáticas
           </p>
           <div>
-            <button class="btn-calltoaction rounded-pill" type="button">
+            <button onclick="location.href='planos.html'" class="btn-calltoaction rounded-pill" type="button">
               Saber mais
             </button>
           </div>
@@ -106,7 +106,7 @@
       </div>
       <div class="row row-cols-2 row-cols-sm-2 row-cols-md-4">
         <div class="col">
-          <div class="card">
+          <div class="card" style="border:0;">
             <img src="dist/img/cobrancas.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card" style="border:0;">
             <img src="dist/img/faturacao.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">Faturação Automatizada</p>
@@ -124,7 +124,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card" style="border:0;">
             <img src="dist/img/envio.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">
@@ -135,7 +135,7 @@
         </div>
 
         <div class="col">
-          <div class="card">
+          <div class="card" style="border:0;">
             <img src="dist/img/seguro.png" alt="Agilize as suas Cobranças" />
             <div class="card-body">
               <p class="card-text home-card-text">
@@ -157,7 +157,8 @@
           o objectivo da automatização e desmaterialização de processos.
           A sua atividade de desenvolvimento centraliza-se na optimização e economia dos recursos disponíveis.
         </p>
-        <button type="button" class="btn-registo rounded-pill">Saber Mais</button>
+        <button type="button" onclick="location.href='quemsomos.html'" class="btn-registo rounded-pill">Saber
+          Mais</button>
       </div>
       <div class="col-md-5">
         <img class="bd-placeholder-img bd-placeholder-img-lg img-fluid mx-auto p-2" src="dist/img/quem-webify.png"
@@ -343,7 +344,7 @@
                   <span style="padding-right: 15px;">
                     <img src="dist/img/IconFacebook.svg" alt="Facebook">
                   </span>
-                  <a href="https//www.facebook.com/profile.php?id=61571187801546" target="_blank">@</a>
+                  <a href="https//www.facebook.com/profile.php?id=61571187801546" target="_blank">@PAY&GO</a>
                 </div>
               </div>
             </div>
