--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
             <li class="nav-item menu"><a class="nav-link menu" href="planos.html"
                 class="btn header-menu-item">PAY&GO</a>
             </li>
-            <li class="nav-item menu"><a class="nav-link menu" href="faqs.html" class="btn header-menu-item">Blog</a>
+            <li class="nav-item menu"><a class="nav-link menu" href="blog.html" class="btn header-menu-item">Blog</a>
             </li>
             <li class="nav-item menu"><a class="nav-link menu" href="faqs.html" class="btn header-menu-item">FAQs</a>
             </li>
@@ -194,7 +194,7 @@
                     <span style="padding-right: 15px;">
                       <img src="dist/img/IconFacebook.svg" alt="Facebook">
                     </span>
-                    <a href="https//www.facebook.com/profile.php?id=61571187801546" target="_blank">@</a>
+                    <a href="https//www.facebook.com/profile.php?id=61571187801546" target="_blank">@PAY&GO</a>
                   </div>
                 </div>
               </div>
