--- a/registo.html
+++ b/registo.html
@@ -28,7 +28,7 @@
             <li class="nav-item menu"><a class="nav-link menu" href="planos.html"
                 class="btn header-menu-item">PAY&GO</a>
             </li>
-            <li class="nav-item menu"><a class="nav-link menu" href="faqs.html" class="btn header-menu-item">Blog</a>
+            <li class="nav-item menu"><a class="nav-link menu" href="blog.html" class="btn header-menu-item">Blog</a>
             </li>
             <li class="nav-item menu"><a class="nav-link menu" href="faqs.html" class="btn header-menu-item">FAQs</a>
             </li>
