--- a/quemsomos.html
+++ b/quemsomos.html
@@ -85,8 +85,9 @@
       </div>
       <div class="col-md-7 p-5">
         <div class="titulo-azul">Porque escolher a webify</div>
-        <p class="lead">Regemo-nos por principios simples e ágeis para o desenvolvimento dos produtos na área dos
-          sistemas de informação. A satisfação dos nossos clientes na persecução dos seus objectivos é o nosso foco.
+        <p class="lead">Regemo-nos por principios simples e ágeis para o desenvolvimento dos produtos. A
+          satisfação dos nossos clientes na persecução dos seus objectivos é o nosso foco.
+          Procuramos responder a requisitos em constante mudança e a acrescentar valor aos nossos clientes.
         </p>
       </div>
     </div>
@@ -120,8 +121,7 @@
       <div class="col-md-7 p-5">
         <div class="titulo-azul">o que já foi implementado</div>
         <p class="lead">Dispomos de um portfolio variado de produtos, para Gestão de Eventos, Cobranças,
-          Carregamentos Veículos Eléctricos, Campanhas de Marketing por WhatsApp, sendo Tech Provider desta
-          plataforma de comunicação.
+          Carregamentos Veículos Eléctricos, Campanhas de Marketing por WhatsApp, plataforma que somos Tech Provider.
         </p>
       </div>
     </div>
