--- a/quemsomos.html
+++ b/quemsomos.html
@@ -85,9 +85,9 @@
       </div>
       <div class="col-md-7 p-5">
         <div class="titulo-azul">Porque escolher a webify</div>
-        <p class="lead">Regemo-nos por principios simples e ágeis para o desenvolvimento dos produtos. A
-          satisfação dos nossos clientes na persecução dos seus objectivos é o nosso foco.
-          Procuramos responder a requisitos em constante mudança e a acrescentar valor aos nossos clientes.
+        <p class="lead">Regemo-nos por principios simples e ágeis para o desenvolvimento dos produtos. Procuramos
+          responder aos requisitos mais ambiciosos e a acrescentar valor. A satisfação dos nossos clientes na persecução
+          dos seus objectivos é o nosso foco.
         </p>
       </div>
     </div>
