--- a/quemsomos.html
+++ b/quemsomos.html
@@ -99,8 +99,8 @@
         <div class="titulo-azul">Missão, visão e valores</div>
         <p class="lead">A WEBIFY conta com vários clientes que demonstram a sua satisfação, sendo eles os primeiros
           embaixadores dos nossos produtos.
-          Ajudamos os nossos clientes a automatizar e optimizar os seus processos manuais passíveis de
-          automatização e por forma a libertar recursos para outras tarefas mais produtivas ou criativas.
+          Ajudamos os nossos clientes a atingir os seus objectivos, a automatizar e optimizar os seus processos, por
+          forma a libertar recursos para outras tarefas.
           A confiança depositada e a relação com o cliente é vista como uma parceria, em que fazemos o trajecto lado
           a lado e crescemos juntos.
         </p>
