--- a/planos.html
+++ b/planos.html
@@ -21,21 +21,18 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="navbar-collapse d-lg-flex collapse" id="navbarspayandgo" style="">
+        <div class="navbar-collapse d-lg-flex collapse" id="navbarspayandgo">
           <ul class="navbar-nav col-lg-9 justify-content-lg-center">
-            <li class="nav-item menu"><a class="nav-link menu" href="quemsomos.html">Quem Somos</a>
+            <li class="nav-item menu"><a class="btn header-menu-item" href="quemsomos.html">Quem Somos</a>
             </li>
-            <li class="nav-item menu"><a class="nav-link menu" href="planos.html"
-                class="btn header-menu-item">PAY&GO</a>
+            <li class="nav-item menu"><a class="btn header-menu-item" href="planos.html">PAY&GO</a>
             </li>
-            <li class="nav-item menu"><a class="nav-link menu" href="blog.html" class="btn header-menu-item">Blog</a>
+            <li class="nav-item menu"><a class="btn header-menu-item" href="blog.html">Blog</a>
             </li>
-            <li class="nav-item menu"><a class="nav-link menu" href="faqs.html" class="btn header-menu-item">FAQs</a>
+            <li class="nav-item menu"><a class="btn header-menu-item" href="faqs.html">FAQs</a>
             </li>
-            <li class="nav-item menu"><a class="nav-link menu" href="contacto.html"
-                class="btn header-menu-item">Contactos</a>
+            <li class="nav-item menu"><a class="btn header-menu-item" href="contacto.html">Contactos</a>
             </li>
-
           </ul>
           <div class="d-lg-flex col-lg-3 justify-content-lg-end text-end">
             <button type="button" onclick="location.href='registo.html'"
