--- a/quemsomos.html
+++ b/quemsomos.html
@@ -82,9 +82,13 @@
       </div>
       <div class="col-md-7 p-5">
         <div class="titulo-azul">Porque escolher a webify</div>
-        <p class="lead">Regemo-nos por principios simples e ágeis para o desenvolvimento dos produtos. Procuramos
-          responder aos requisitos mais ambiciosos e a acrescentar valor. A satisfação dos nossos clientes na persecução
-          dos seus objectivos é o nosso foco.
+        <p class="lead">
+          A WEBIFY conta com vários clientes que demonstram a sua satisfação, sendo eles os primeiros
+          embaixadores dos nossos produtos.
+          Ajudamos os nossos clientes a atingir os seus objectivos, a automatizar e optimizar os seus processos, por
+          forma a libertar recursos para outras tarefas.
+          Regemo-nos por principios simples e ágeis para o desenvolvimento dos produtos. Procuramos
+          responder aos requisitos mais ambiciosos e a acrescentar valor ao nossos clientes.
         </p>
       </div>
     </div>
@@ -94,12 +98,10 @@
     <div class="row featurette">
       <div class="col-md-7 p-5">
         <div class="titulo-azul">Missão, visão e valores</div>
-        <p class="lead">A WEBIFY conta com vários clientes que demonstram a sua satisfação, sendo eles os primeiros
-          embaixadores dos nossos produtos.
-          Ajudamos os nossos clientes a atingir os seus objectivos, a automatizar e optimizar os seus processos, por
-          forma a libertar recursos para outras tarefas.
+        <p class="lead">
+          A satisfação dos nossos clientes na persecução dos seus objectivos é o nosso foco.
           A confiança depositada e a relação com o cliente é vista como uma parceria, em que fazemos o trajecto lado
-          a lado e crescemos juntos.
+          a lado e crescemos juntos. Estamos sempre em busca da melhoria contínua.
         </p>
       </div>
       <div class="col-md-5 p-5">
